--- a/TwitterClient/TwitterClient/TweetNibCell.xib
+++ b/TwitterClient/TwitterClient/TweetNibCell.xib
@@ -11,53 +11,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetNibCell" rowHeight="111" id="KGk-i7-Jjw" customClass="TweetNibCell" customModule="TwitterClient" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="355" height="111"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetNibCell" rowHeight="117" id="KGk-i7-Jjw" customClass="TweetNibCell" customModule="TwitterClient" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="487" height="117"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="355" height="110.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="487" height="116.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F2H-FU-FNg">
-                        <rect key="frame" x="8" y="8" width="95" height="95"/>
+                        <rect key="frame" x="8" y="8" width="65" height="65"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="95" id="7qR-9U-Az8"/>
-                            <constraint firstAttribute="height" constant="95" id="Hbc-Kl-ud3"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="Jkz-m9-Ipt"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="lWH-tE-RYV"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="IXC-I0-ktb"/>
+                            <constraint firstAttribute="width" constant="65" id="Xxu-2k-93d"/>
+                            <constraint firstAttribute="height" constant="65" id="fVR-b2-ebZ"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="ym1-Lo-Qg3"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smk-9P-a1w">
-                        <rect key="frame" x="111" y="8" width="101" height="27"/>
+                        <rect key="frame" x="81" y="8" width="101" height="27"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Tweet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7WK-vw-Oj3">
-                        <rect key="frame" x="111" y="43" width="236" height="30"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhA-mF-ii1">
+                        <rect key="frame" x="81" y="43" width="387" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.19215686274509802" green="0.56862745098039214" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="smk-9P-a1w" firstAttribute="leading" secondItem="F2H-FU-FNg" secondAttribute="trailing" constant="8" id="7uN-bQ-sOJ"/>
-                    <constraint firstAttribute="bottom" secondItem="7WK-vw-Oj3" secondAttribute="bottom" constant="37.5" id="BoV-a9-tTZ"/>
-                    <constraint firstAttribute="trailing" secondItem="7WK-vw-Oj3" secondAttribute="trailing" constant="8" id="H9o-wn-chT"/>
-                    <constraint firstItem="7WK-vw-Oj3" firstAttribute="top" secondItem="smk-9P-a1w" secondAttribute="bottom" constant="8" id="UFm-N0-OFF"/>
-                    <constraint firstItem="smk-9P-a1w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="VQz-7R-b8q"/>
-                    <constraint firstItem="F2H-FU-FNg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="kqS-1h-lis"/>
-                    <constraint firstItem="F2H-FU-FNg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="u7n-C7-8yz"/>
-                    <constraint firstItem="7WK-vw-Oj3" firstAttribute="leading" secondItem="F2H-FU-FNg" secondAttribute="trailing" constant="8" id="z8P-CR-P9J"/>
+                    <constraint firstItem="smk-9P-a1w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="DEQ-Xn-gfc"/>
+                    <constraint firstAttribute="trailing" secondItem="xhA-mF-ii1" secondAttribute="trailing" constant="19" id="Dff-oX-thf"/>
+                    <constraint firstItem="F2H-FU-FNg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="FIG-yg-the"/>
+                    <constraint firstItem="xhA-mF-ii1" firstAttribute="top" secondItem="smk-9P-a1w" secondAttribute="bottom" constant="8" id="Mjq-P2-Ew7"/>
+                    <constraint firstItem="F2H-FU-FNg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="MuI-Ak-Qb2"/>
+                    <constraint firstItem="F2H-FU-FNg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Tam-Ec-MtM"/>
+                    <constraint firstItem="smk-9P-a1w" firstAttribute="leading" secondItem="F2H-FU-FNg" secondAttribute="trailing" constant="8" id="jCO-IK-PC1"/>
+                    <constraint firstItem="F2H-FU-FNg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qry-BP-Vsi"/>
+                    <constraint firstItem="xhA-mF-ii1" firstAttribute="leading" secondItem="F2H-FU-FNg" secondAttribute="trailing" constant="8" id="zTD-R0-PLE"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="tweetLabel" destination="7WK-vw-Oj3" id="yWT-6v-bkT"/>
+                <outlet property="tweetLabel" destination="xhA-mF-ii1" id="wCb-oD-irq"/>
                 <outlet property="userImageView" destination="F2H-FU-FNg" id="uaT-IG-OrD"/>
                 <outlet property="usernameLabel" destination="smk-9P-a1w" id="lD6-cO-0sy"/>
             </connections>
-            <point key="canvasLocation" x="-61.5" y="2.5"/>
+            <point key="canvasLocation" x="4.5" y="5.5"/>
         </tableViewCell>
     </objects>
 </document>
