--- a/TwitterClient/TwitterClient/TweetNibCell.xib
+++ b/TwitterClient/TwitterClient/TweetNibCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="487" height="117"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="487" height="116.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="487" height="116"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F2H-FU-FNg">
@@ -33,7 +34,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhA-mF-ii1">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhA-mF-ii1">
                         <rect key="frame" x="81" y="43" width="387" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
@@ -48,6 +49,7 @@
                     <constraint firstItem="xhA-mF-ii1" firstAttribute="top" secondItem="smk-9P-a1w" secondAttribute="bottom" constant="8" id="Mjq-P2-Ew7"/>
                     <constraint firstItem="F2H-FU-FNg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="MuI-Ak-Qb2"/>
                     <constraint firstItem="F2H-FU-FNg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Tam-Ec-MtM"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="xhA-mF-ii1" secondAttribute="bottom" constant="44" id="VkD-xH-N7O"/>
                     <constraint firstItem="smk-9P-a1w" firstAttribute="leading" secondItem="F2H-FU-FNg" secondAttribute="trailing" constant="8" id="jCO-IK-PC1"/>
                     <constraint firstItem="F2H-FU-FNg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qry-BP-Vsi"/>
                     <constraint firstItem="xhA-mF-ii1" firstAttribute="leading" secondItem="F2H-FU-FNg" secondAttribute="trailing" constant="8" id="zTD-R0-PLE"/>
